--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -25,5 +25,5 @@
           .col
             oauth-buttons(classes='btn-block')
           .col: button.btn.btn-primary(type="submit") SIGN IN
-        a.forgot(href="#") Forgot Password?
+        //- a.forgot(href="#") Forgot Password?
     .r-col.has-background
