--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -23,7 +23,9 @@
 @import 'admin/admin';
 @import 'new-project/new-project';
 @import 'project/project';
+@import '../components/account/account';
 @import '../components/footer/footer';
+@import '../components/sidebar/sidebar';
 /* endinject */
 
 *
