--- a/client/app/new-project/Q1/question.jade
+++ b/client/app/new-project/Q1/question.jade
@@ -1,6 +1,6 @@
 .new-project
   header.header
-    .header-action: span.icon.ti-menu
+    .header-action: span.icon.ti-menu(ng-click="showMainSidebar()")
     .header-title Start a New Project
     .header-nav: ul
       li(ng-show="NewProject.project") Test
