--- a/client/assets/styles/_forms.styl
+++ b/client/assets/styles/_forms.styl
@@ -15,7 +15,7 @@ textarea
   line-height 40px
   outline 0
   padding 0 ($padding - 5)
-  transition border 200ms ease, box-shadow 200ms ease
+  transition border 200ms ease, box-shadow 200ms ease, height 200ms ease
   width 100%
   &.ctrl-sm
     font normal 11px/30px $fn-primary
