--- a/client/email/share/html.ejs
+++ b/client/email/share/html.ejs
@@ -11,7 +11,11 @@
 <!-- body -->
 <table class="body-wrap" bgcolor="#f6f6f6">
   <tr>
-    <td></td>
+    <td style="text-align: center; padding: 20px">
+      <img src="http://rp.concludeapp.co/assets/images/logo_vert-3d6e820178.png" width="160" height="86" />
+    </td>
+  </tr>
+  <tr>
     <td class="container" bgcolor="#FFFFFF">
 
       <!-- content -->
