--- a/client/app/project/project.styl
+++ b/client/app/project/project.styl
@@ -197,6 +197,7 @@
     position absolute
 .project-content
   padding 80px 0 65%
+  white-space pre-line
   .project-content_section
     margin 0 auto 80px
     p,
@@ -850,7 +851,9 @@
         color $c-gray
         &:hover
           color darken($c-gray, 20%)
-      
+  .note
+    background rgba($c-blue, 0.1)
+    padding 0 $padding
 .progress-card
   margin-bottom ($padding * 2)
   padding $padding
@@ -970,6 +973,10 @@
   transition top 200ms ease, opacity 100ms ease, visibility 100ms ease
   visibility hidden
   z-index -1
+  .loading
+    position absolute
+    top 0
+    width 100%
 .active
   .hidden-menu
     opacity 1
