--- a/client/components/share/share.jade
+++ b/client/components/share/share.jade
@@ -1,4 +1,5 @@
 .share
+  .loading(ng-class="{active: share.sendingEmails}")
   .share_to: form(name="inviteNew", ng-submit="share.queueInvite({'email': share.to})")
     input(type="text", placeholder="Enter a name or email...", ng-model="share.to")
     input(type="submit", style="display: none")
@@ -7,7 +8,7 @@
     .sl_item.result(ng-show="share.to", id="user-0", ng-click="share.queueInvite({'email': share.to})", ng-class="{invalid: share.error}")
       .avatar(data-initials="?")
       .sli_content {{share.to}}
-    .sl_item.result(ng-repeat="user in share.users | filter: share.to", ng-show="share.to.length", id="user-{{user._id}}", ng-click="share.queueInvite(user)", )
+    .sl_item.result(ng-repeat="user in share.users | filter: share.to as filteredUsers", ng-show="share.to.length", id="user-{{user._id}}", ng-click="share.queueInvite(user)", )
       .avatar(data-initials="{{user.user.name ? (user.user.name | initials) : '?'}}", ng-class="{'has-photo': user.photo}", style="background-image: url({{user.photo}})")
       .sli_content
         span.name {{user.name}}
@@ -17,6 +18,7 @@
       .sli_content
         span.name {{user.name}}
         span.email {{user.email}}
+  .note(ng-show="share.to.length && filteredUsers.length <= 0 && share.error") You must enter a valid Return Path email address.
   .share_footer.clearfix(ng-show="share.invitees.length"): .flex-row
     input(type="text", placeholder="Enter a custom message...", ng-model="share.message")
     a.btn.btn-secondary.btn-sm.pull-right(ng-click="share.cancelShare()") CANCEL
