--- a/client/email/share/html.ejs
+++ b/client/email/share/html.ejs
@@ -12,7 +12,7 @@
 <table class="body-wrap" bgcolor="#f6f6f6">
   <tr>
     <td style="text-align: center; padding: 20px">
-      <img src="http://rp.concludeapp.co/assets/images/logo_vert-3d6e820178.png" width="160" height="86" />
+      <img src="http://rp.concludeapp.co/assets/images/logo_vert.png" />
     </td>
   </tr>
   <tr>
